Article popup: removed unnecessary selector, its associated styling and JS which fixed footer extra space

--- a/public/style/scss/partials/_grids.scss
+++ b/public/style/scss/partials/_grids.scss
@@ -27,12 +27,12 @@
 // Quality Construction Grid (the About section)
 ////////////////////////////////////////////////////////////////////////////////
 .vid {
-	color: $gray2;
-	background-color: $blue2;
+	color: $gray;
+	background-color: $gray2;
 	line-height: 1.4;
 	margin-bottom: 2rem;
 	h1 {
-		color: $gray2;
+		color: $gray;
 		// padding-top: 1rem;
 		margin-top: 1rem;
 	}
